--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ and open the template in the editor.
                     navigator.geolocation.getCurrentPosition(onLocationSuccess, onLocationError);
                     
                     //make the first page disappear, and show the second page
-                    $('firstBtnz').fadeOut(300);
+                    $('firstBtn').fadeOut(300);
                     var secondPage= document.getElementById('button-group');
                     secondPage.style.display = 'block';
                     secondPage.fadeIn(300);
@@ -154,6 +154,7 @@ and open the template in the editor.
 
             // take the photo
             function capturePhoto() {
+                alert("taking pic");
                 // Take picture using device camera and retrieve image as base64-encoded string
                 navigator.camera.getPicture(onPhotoDataSuccess, onPhotoFail, { quality: 50,
                   destinationType: destinationType.DATA_URL });
