--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ and open the template in the editor.
             <div id="firstBtn">
                 <h1>Welcome to Our Tree Caching Trail!</h1>
                 <button id="scan_Code" onClick="getBarcde();">Scan the QR Code</button>                
+                <button onClick="capturePhoto();">Take a picture of this Tree</button><br><br>
                 <p id="hint">
                     You can find the QR codes in the tags attached to the trees.
                 </p>
@@ -26,7 +27,7 @@ and open the template in the editor.
                 <div id="helpUs">
                     <h3>Please Help Us to Know More About This Tree</h3>
                     <img style="display:none;width:400px;height:400px;" id="smallImage" src="" />
-                    <button onClick="capturePhoto();">Take a picture of this Tree</button><br><br>
+<!--                    <button onClick="capturePhoto();">Take a picture of this Tree</button><br><br>-->
               		<div id="comment">
                             <h2>Anything that you observe abnormal?</h2>
                             <form action="#">
