--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ and open the template in the editor.
 
                 // Unhide image elements
                 //
-                smallImage.style.display = 'block';
+                smallImage.style.display = 'inherit';
 
                 // Show the captured photo
                 // The in-line CSS rules are used to resize the image
@@ -197,7 +197,7 @@ and open the template in the editor.
                         <label id="tree_info">This is a Sugar Maple tree</label><br>
                         <div id="helpUs">
                             <h3>Please Help Us to Know More About This Tree</h3>
-                            <img style="display:none;width:400px;height:400px;" id="smallImage" src="" />
+                            <img style="display:none;width:300px;height:300px;" id="smallImage" src="" />
                             <button onClick="capturePhoto();">Take a picture of this Tree</button><br><br>
                                 <div id="comment">
                                     <h2>Anything that you observe abnormal?</h2>
