--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ and open the template in the editor.
                 // Unhide image elements
                 //
                 smallImage.style.display = 'tabel-cell';
-                smallImage.style.padding-left = 60px;
+                smallImage.style.left = '60px';
                 // Show the captured photo
                 // The in-line CSS rules are used to resize the image
                 //
