--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ and open the template in the editor.
 
                 // Unhide image elements
                 //
-                smallImage.style.display = 'tabel-cell';
+                smallImage.style.display = 'block';
               //  smallImage.style.left = '60px';
                 // Show the captured photo
                 // The in-line CSS rules are used to resize the image
@@ -189,7 +189,7 @@ and open the template in the editor.
                         <label id="tree_info">This is a Sugar Maple tree</label><br>
                         <div id="helpUs">
                             <h3>Please Help Us to Know More About This Tree</h3>
-                            <img style="display:none;width:300px;height:300px;" id="smallImage" src="" />
+                            <img style="display:none;width:480px;height:480px;" id="smallImage" src="" />
                             <button onClick="capturePhoto();">Take a picture of this Tree</button><br><br>
                                 <div id="comment">
                                     <h2>Anything that you observe abnormal?</h2>
